# cadmus

./: .gitignore  Cargo.toml  LICENSE-THIRD-PARTY  README.md  build.rs  cadmus.darwin-arm64.node  index.ts  package-lock.json  package.json  tsconfig.json  types.ts
.cargo/: config.toml
.github/workflows/: release.yml
docs/: CONCEPT_v1_buildout.md  PLAN_skeleton.md  architecture.md  backlog.kanban.md  bug.kanban.md  definition.md
docs/archive/: CONCEPT_v1_buildout.md  PLAN_audio_pipeline.md  PLAN_browser_audio_formats.md  PLAN_explicit_model_catalog.md  PLAN_inference_core.md  PLAN_linux_x64_build.md  PLAN_linux_x64_build.napi_rogue_attempt.diff  PLAN_local_macos_release_build.md  PLAN_model_storage.md  PLAN_napi_surface.md  PLAN_public_api.md  POSTPONED_PLAN_crates_io_publish.md
fixtures/: eins-zwei-drei.flac  eins-zwei-drei.m4a  eins-zwei-drei.webm
scripts/: release.mjs
src/: api.rs  catalog.rs  decode.rs  error.rs  inference.rs  lib.rs  napi.rs  opus.rs  storage.rs
tests/: catalog.test.mjs  download.test.mjs  file_url.test.mjs  lifecycle.test.mjs  public_api.rs  transcribe.test.mjs  version.test.mjs  wav_helper.test.mjs
tests/_helpers/: cache.mjs  wav.mjs
