[package]
name = "cadmus"
version = "1.1.1"
edition = "2024"
license = "MIT"
description = "CTranslate2-based Whisper transcription, synchronous Rust core, optional napi-rs Node surface."
readme = "README.md"
# D27 allowlist. Patterns are root-anchored (leading `/`) — cargo's `include`
# uses gitignore-glob semantics, and unanchored entries like `LICENSE`
# would otherwise pull `node_modules/**/LICENSE` into the published tarball.
# Anchoring is the smallest deviation from D27's literal list that satisfies
# the plan's "no node_modules/" verification requirement.
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/build.rs",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/fixtures/**",
    "/LICENSE",
    "/LICENSE-THIRD-PARTY",
    "/README.md",
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

# Per-platform ct2rs feature subset (D8) — Pattern B from PLAN_skeleton.md
# (per-target dependency syntax with disjoint feature lists). Lookup date 2026-05-08.
# macOS: Accelerate framework + ruy. Linux: oneMKL prebuild + dnnl + compiler openmp.
# Windows: dnnl only, no OpenMP. Both ct2rs OpenMP features are unusable on MSVC:
# openmp-runtime-intel hard-requires libiomp5 (absent on the windows-latest runner),
# and openmp-runtime-comp emits `link-lib=gomp` — GCC's OpenMP lib, which does not
# exist for MSVC (Windows compiler OpenMP is vcomp). Dropping OpenMP yields a
# self-contained, DLL-free .node built with OPENMP_RUNTIME=NONE; dnnl is built
# in-tree by CTranslate2's CMake. Trade-off: reduced intra-op parallelism on
# Windows. CUDA / cuDNN / cuda-dynamic-loading explicitly excluded (D7).
[target.'cfg(target_os = "macos")'.dependencies]
ct2rs = { version = "=0.9.18", default-features = false, features = ["whisper", "accelerate", "ruy"] }

[target.'cfg(target_os = "linux")'.dependencies]
ct2rs = { version = "=0.9.18", default-features = false, features = ["whisper", "mkl", "dnnl", "openmp-runtime-comp"] }

[target.'cfg(target_os = "windows")'.dependencies]
ct2rs = { version = "=0.9.18", default-features = false, features = ["whisper", "dnnl"] }

[dependencies]
napi = { version = "3.8.6", default-features = false, features = ["napi8"], optional = true }
napi-derive = { version = "3.5.5", optional = true }

# Audio pipeline (PLAN_audio_pipeline). Lookup date 2026-05-20.
symphonia = { version = "=0.5.4", default-features = false, features = ["mp3", "wav", "flac", "pcm", "mkv", "isomp4", "aac"] }
rubato    = "=0.16.2"
# Opus decoder for browser-recorded WebM/Opus streams (symphonia 0.5.4 ships
# only an empty stub for Opus). c2rust transpile of libopus 1.3.1 — pure Rust
# build (no C toolchain), BSD-3-Clause. Lookup date 2026-05-20.
unsafe-libopus = "=0.2.0"

# HTTP client for HuggingFace model downloads (PLAN_model_storage).
# Lookup date 2026-05-08. Pure-Rust TLS via rustls; no system OpenSSL.
ureq = { version = "=3.3.0", default-features = false, features = ["rustls", "platform-verifier"] }

[build-dependencies]
napi-build = "2.3.1"
